修改 页面  添加页面

--- a/views/adviser_case_p.html
+++ b/views/adviser_case_p.html
@@ -128,6 +128,21 @@
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
   $(function(){
+    window._bd_share_config = {
+      "common": {
+        "bdSnsKey": {},
+        "bdText": "",
+        "bdMini": "1",
+        "bdMiniList": false,
+        "bdPic": "",
+        "bdStyle": "0",
+        "bdSize": "16",
+        "bdUrl": window.location.href
+      },
+      "share": {}
+    };
+    console.log(_bd_share_config.common.bdUrl)
+    with (document)0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion=' + ~(-new Date() / 36e5)];
       $('.banner-box-left .slider').xSlider({
           //轮播图配置
 //          autoplay : 500,
@@ -154,9 +169,9 @@
           '<div class="homepageing" style="background:url('+fn.avaterimg(aitem.uid,'small',aitem.user_info.status,aitem.user_info.version)+') no-repeat 0 0;background-size: 50px 50px;"></div>'+
           '<h3>'+ aitem.user_info.realname +'<i></i></h3>'+
           '<ul>'+
-          '<div class="bdsharebuttonbox" style="margin-top: 15px;">'+
+          '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 15px;">'+
           '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>'+
-          '<a href="#" class="bds_tsinas" data-cmd="weixin" title="分享到朋友圈"></a>'+
+          '<a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>'+
           '<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>'+
           '<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>'+
           '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px">举报</div>'+
@@ -185,8 +200,8 @@
         favHtml += appendArticleItem(favArr[i]);
       }
       $('.right-main').append(favHtml);
+      window._bd_share_main.init();
       $('.report-btn').on("click",report); //点击举报
-      $('.share-btn').on('click',share); //点击分享
     }
     function addArticleImg (imgList) {
       if(imgList==undefined){
@@ -264,7 +279,6 @@
       })
     });
     $('.report-btn').on("click",report); //点击举报
-    $('.share-btn').on('click',share); //点击分享
     function report(){
       //举报调取函数
       if(login_ss == undefined){
@@ -360,16 +374,6 @@
         }else{
           report_content ='';
         }
-      });
-    }
-    function share(){
-      //调取分享函数
-      var that =this;
-      layer.open({
-        type: 2,
-        title: '分享到',
-        area: ['262px', '327px'],
-        content: ['/share?title='+encodeURI($(that).attr('data-title'))+'&url='+$(that).attr('data-url'), 'no']
       });
     }
   })
