--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -42,9 +42,8 @@
 			<li>
 				<div class="gw-people">
 					<a href="{{helper.articleUrlgen('blog',item.uid|string)}}" style="display:inline-block;">
-						<img src="../assets/img/profile4.jpg" alt="">
+						<img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="">
 					</a>
-					<!-- <img src="{{item.img_list}}" alt=""> -->
 					<span class="pepple-icon">{{item.user_info.realname}}<i></i></span>
 				</div>
 				<a href="{{helper.articleUrlgen('blog',item.uid|string,'article='+item.id | string)}}">
@@ -61,7 +60,7 @@
 				<li class="gw-newslist">
 					<div class="gw-people">
 						<a href="{{helper.articleUrlgen('blog',item.uid|string)}}">
-							<img src="../assets/img/profile4.jpg" alt="">
+							<img src="{{helper.avaterimg(item.user_info.uid, 'small', 0,item.user_info.version)}}" alt="">
 						</a>
 						<span class="pepple-icon"><em>{{item.user_info.realname}}</em><i></i></span>
 					</div>
