--- a/views/release_article.html
+++ b/views/release_article.html
@@ -12,8 +12,8 @@
 	<!-- ===头部=== -->
 	{% include "widget/top/top.html" %}
 	<!-- ====导航===== -->
-	{% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-	{{nav_seventh.nav_seventh("#",tdk.cityid,helper)}}
+	{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+  {{ new_nav_red.new_nav_red(helper) }}
 	<div class="dui-layout-lg clearfix" style="margin-top: 20px;">
   	<!-- ==广告1== -->
   	<div class="rel-case-map" id="AD_{% if login_info.usertype == 2 %}ADVISOR{% elif login_info.usertype == 3 %}CANZAN{% endif %}_CENTER_POSTARTICLE_SEAT1">
