--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -39,7 +39,7 @@
 					</div>
 					<div class="leaveField clearfix">
 						<div class="title">手机号码：</div>
-						<div class="text1"><input name="phone" id="phone" type="text" placeholder="请留下您的电话号码" /><i style="font-size: 14px;color: #c13232;line-height: 24px;padding-left: 4px;">*</i></div>
+						<div class="text1"><input name="phone" id="phone-slide" type="text" placeholder="请留下您的电话号码" /><i style="font-size: 14px;color: #c13232;line-height: 24px;padding-left: 4px;">*</i></div>
 						<div class="textNum"><span id="phoneTip" class="numTip"></span></div>
 					</div>
 
@@ -94,6 +94,7 @@
                                 <option value="35">(G)贵阳金吉列</option>
                                 <option value="24">(H)哈尔滨金吉列</option>
                                 <option value="32">(H)邯郸金吉列</option>
+								<option value="51">(H)汉口金吉列</option>
                                 <option value="26">(H)呼和浩特金吉列</option>
                                 <option value="6">(H)杭州金吉列</option>
                                 <option value="22">(H)合肥金吉列</option>
@@ -117,7 +118,7 @@
                                 <option value="17">(T)太原金吉列</option>
                                 <option value="18">(T)唐山金吉列</option>
 								<!--<option value="49">(W)武昌金吉列</option>-->
-                                <option value="14">(W)武汉金吉列</option>
+                                <option value="50">(W)武昌金吉列</option>
                                 <option value="33">(W)无锡金吉列</option>
                                 <option value="42">(W)温州金吉列</option>
                                 <option value="28">(X)厦门金吉列</option>
