--- a/views/center_case_detail.html
+++ b/views/center_case_detail.html
@@ -135,7 +135,9 @@
     </div>
   </div>
 </div>
-{% include "widget/footer/footer.html" %}
+  {% include "widget/new_footer/new_footer.html" %}
+  {% import "widget/new_slide/new_slide.html" as  slide %}
+  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
   <div>
       <input type="hidden" id="detail_catid" value="{{catid}}"/>
       <input type="hidden" id="detail_id" value="{{id}}"/>
@@ -147,6 +149,8 @@
   }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
