--- a/views/center_comment.html
+++ b/views/center_comment.html
@@ -90,6 +90,8 @@
 </div>
 
 {% include "widget/new_footer/new_footer.html" %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
 <script>
     var login_ss = null; 
     if($.cookie('login_ss') != undefined){
@@ -97,10 +99,13 @@
     }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 <script>
     $(function () {
       //让分页器居中显示
