--- a/views/center_main.html
+++ b/views/center_main.html
@@ -157,6 +157,8 @@
     </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
 <div id="photoDialog" style="display: none;"><!---->
     <!--上传pop-->
     <div class="upload-photo-container" id="upload-photo-container" style="display: none">
@@ -181,6 +183,8 @@
     }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/bottom_comment.js"></script>
