--- a/views/center_message.html
+++ b/views/center_message.html
@@ -82,12 +82,16 @@
     </div>
 </div>
 {% include "widget/new_footer/new_footer.html" %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
 <script>
     if($.cookie('login_ss') != undefined){
         login_ss = JSON.parse($.cookie('login_ss'));  
     }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/select.js"></script>
