--- a/views/draft.html
+++ b/views/draft.html
@@ -97,7 +97,9 @@
         </div>
     </div>
 	</div>
-  {% include "widget/new_footer/new_footer.html" %}
+    {% include "widget/new_footer/new_footer.html" %}
+    {% import "widget/new_slide/new_slide.html" as  slide %}
+    {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
   <script>
   var login_ss = null; //获取用户信息
   if($.cookie('login_ss') != undefined){
@@ -105,6 +107,8 @@
   }
   </script>
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/select.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
