--- a/views/release_article.html
+++ b/views/release_article.html
@@ -202,6 +202,8 @@
       </div>
 	</div>
   {% include "widget/new_footer/new_footer.html" %}
+  {% import "widget/new_slide/new_slide.html" as  slide %}
+  {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
   <script>
     var login_ss = null; //获取用户信息
     if($.cookie('login_ss') != undefined){
@@ -210,6 +212,8 @@
     console.log(login_ss)
   </script>
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
+  <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
   <script  src="{{helper.cdnhost}}/assets/js/wangEditor.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
