各个页面引入侧边栏  调试侧边表单

--- a/views/center_article_detail.html
+++ b/views/center_article_detail.html
@@ -107,7 +107,6 @@
     </div>
   </div>
 </div>
-{% include "widget/footer/footer.html" %}
   {% import "widget/new_slide/new_slide.html" as  slide %}
   {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
 {% include "widget/new_footer/new_footer.html" %}
@@ -129,6 +128,7 @@
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/view_count_min.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
 <script>
   $(function(){
     window._bd_share_config={
