--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -6,7 +6,8 @@
     <li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>
   </ul>
   <dl>
-    <dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}" alt="{{advisor.realname}}" title="{{advisor.realname}}"></a></dt>
+    <!--<dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}" alt="{{advisor.realname}}" title="{{advisor.realname}}"></a></dt>-->
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}')"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"></a></dt>
     <dd>
       <p class="advisor-name" >{{ advisor.realname }}</p>
       {% if advisor.organid != null %}
@@ -38,7 +39,8 @@
     <li>文章<span class="article-num">{{ advisor.article_count }}</span></li>
   </ul>
   <dl>
-    <dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 1,advisor.version)}}" alt=""></a></dt>
+    <!--<dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 1,advisor.version)}}" alt=""></a></dt>-->
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', 1,advisor.version)}}')"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"></a></dt>
     <dd>
       <p class="advisor-name">金吉列</p>
     </dd>
@@ -151,7 +153,8 @@
 </style>
 <div class="community-advisor dui-box-shadow">
   <dl>
-    <dt class="advisor-img"><a target="_blank" ><img src="{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version,versionflag)}}" alt=""></a></dt>
+    <!--<dt class="advisor-img"><a target="_blank" ><img src="{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version,versionflag)}}" alt=""></a></dt>-->
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(userinfo.uid, 'small', 0,userinfo.version,versionflag)}}')"><a target="_blank"></a></dt>
     <dd>
       <p class="user-name">{{ userinfo.nickname }}</p>
     </dd>
