--- a/views/case_detail.html
+++ b/views/case_detail.html
@@ -9,8 +9,8 @@
   <!-- ===头部=== -->
  {% include "widget/top/top.html" %}
  <!-- ====导航===== -->
- {% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
- {{nav_seventh.nav_seventh("#",tdk.cityid,helper)}}
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(helper) }}
 <div class="dui-layout-lg clearfix dui-layout-padding" >
   <div class="dui-layout-silde ">
     <!-- ====广告图1==== -->
@@ -45,97 +45,63 @@
         {% else %} {#在职顾问#}
           {{community_nav.adviser_nav('案例',userinfo.uid,helper)}}
         {% endif %}
+        <div class="adviser-top clearfix" style="margin-top: 20px;">
+            <div style="float:left;line-height: 50px;" >
+              <div class="adviser-touxiang" style="background:url({{helper.avaterimg(userinfo.uid,'small',userinfo.status,userinfo.version)}}) no-repeat center;background-size:50px 50px;">
+              </div>
+              <span style="font-size: 14px;color:#333;">
+                {{userinfo.realname}}<i class="adviser-v-i"></i>
+              </span>
+            </div>
+            <div style="float:right;" >
+              <div class="bdsharebuttonbox" style="margin-top: 15px;">
+                <a href="#" class="bds_weixin wx" data-cmd="weixin" title="分享到微信"></a>
+                <a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>
+                <a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>
+                <a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>
+              </div>
+            </div>
+        </div>
         <h1 class="adviser-case-detail-h3">
           {{article.article_info.title}}
         </h1>
         <div class="adviser-case-detail-come" >
-          <span style="margin-right:20px;" >来自{{article.article_info.from}}</span>
           <span>时间：{{article.article_info.add_time}}</span>
-          <span style="float:right;">阅读量：<i style="font-style: normal;" id="detail_views_num"></i></span>
+          <span style="float:right;margin-left: 20px;">
+            阅读<i style="font-style: normal;" id="detail_views_num">{{article.article_info.views}}</i>
+          </span>
+          <span style="float:right;margin-left:20px;">
+            收藏{{article.article_info.favorites}}
+          </span>
+          <span style="float:right;margin-left:20px;">
+            评论{{article.article_info.comments}}
+          </span>
+          <span style="float:right;margin-left:20px;">
+            点赞{{article.article_info.votes}}
+          </span>
         </div>
         <div class="adviser-case-detail-offer" >
-          <div class="adviser-case-offer-list" >
-             <h4 class="adviser-case-offer-h4" >
-               一、学生录取情况
-             </h4>
-             <div class="adviser-case-offer-strip" >
-               学生姓名：{{article.article_info.introduce.stu_name}}
-             </div>
-             <div class="adviser-case-offer-strip" >
-               录取院校：
-               {{article.article_info.introduce.school_1}}&nbsp;&nbsp;
-               {{article.article_info.introduce.school_2}}&nbsp;&nbsp; {{article.article_info.introduce.school_3}}
-             </div>
-             <div class="adviser-case-offer-strip" >
-               录取专业：
-               {{article.article_info.introduce.dep_1}}&nbsp;&nbsp;
-               {{article.article_info.introduce.dep_2}}&nbsp;&nbsp;
-               {{article.article_info.introduce.dep_3}}
-             </div>
-             <div class="adviser-case-offer-strip" >
-               留学层级：{{ article.article_info.edu_id | getEdu()}}
-             </div>
-             <div class="adviser-case-offer-strip" >
-               录取时间：{{article.article_info.introduce.admission_time}}
-             </div>
-             <a target="_blank" href="http://jesong.jjl.cn/live/chat.dll?c=1&amp;n={{userinfo.job_number}}" class="dui-btn btn-xlarge btn-consult_ylw adviser-case-offer-btn"  >检测我的录取情况</a>
-          </div>
-          <div class="adviser-case-offer-list" >
-             <h4 class="adviser-case-offer-h4" >
-               二、学生背景
-             </h4>
-             <div class="adviser-case-offer-strip" >
-               就读院校：{{article.article_info.introduce.pre_school}}
-             </div>
-             <div class="adviser-case-offer-strip" >
-               所学专业：{{article.article_info.introduce.pre_dep}}
-             </div>
-             <div class="adviser-case-offer-strip" >
-               成绩概况：{{article.article_info.introduce.score}}
-             </div>
-             <a target="_blank" href="http://jesong.jjl.cn/live/chat.dll?c=1&amp;n={{userinfo.job_number}}" class="dui-btn btn-xlarge btn-consult_blue adviser-case-offer-btn">想要高分</a>
-          </div>
-          <div class="adviser-case-offer-list" >
-            <h4 class="adviser-case-offer-h4" >
-               三、offer展示
-            </h4>
-            <ul class="adviser-case-offer-ul clearfix">
-              {% for item in article.article_info.introduce.offer_img %}
-                <li>
-                  <a target="_blank" href="{{item}}"  >
-                    <img src="{{helper.imageThumb(item,'330x466')}}" />
-                  </a>
-                </li>
-              {% endfor %}
-            </ul>
-          </div>
-          <div class="adviser-case-offer-list" >
-             <h4 class="adviser-case-offer-h4" >
-               四、申请思路及专家分析
-             </h4>
-                {{ article.article_info.message | safe}}
-          </div>
+          {{article.article_info.message | safe}}
         </div>
         <div class="adviser-case-operation-bar clearfix" data-artId = "{{article_id}}" id="articleId" data-memberId ="{{memberId}}" style="padding-top: 40px;
   padding-bottom: 40px;">
-          <span style="margin-left: 187px;float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" id="collection">
-          {% if article.article_info.user_follow_check %}
-            已收藏
-          {% else %}
-            收藏
-          {% endif %}
-          </span>  
-          <span id="fabulous" style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;">
-            <i class="iconfont">
-            {% if article.article_info.vote_info |length %}
-              &#xe604;
+            <span style="margin-left: 187px;float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" id="collection">
+            {% if article.article_info.user_follow_check %}
+              已收藏
             {% else %}
-              &#xe651;
-            {% endif %}  
-            </i>点赞
-          </span> 
-          <span class="share-btn" data-title="{{article.article_info.title}}" style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;">转发</span>
-        </div>
+              收藏
+            {% endif %}
+            </span>  
+            <span id="fabulous" style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;">
+              <i class="iconfont" >
+              {% if article.article_info.vote_info |length %}
+                &#xe604;
+              {% else %}
+                &#xe651;
+              {% endif %}  
+              </i>点赞</span> 
+            <a  style="float:left;width:115px;height:30px;font-size: 14px;color:#fff;text-align:center;line-height: 30px;background:#c13232;margin-right: 60px;cursor: pointer;" target="_blank"  href="http://jesong.jjl.cn/live/chat.dll?c=1&amp;n={{userinfo.job_number}}"  rel="nofollow">立即咨询</a>
+          </div>
         <!-- ========评论===== -->
         {% if userinfo.status == 0 %} 
           {% include "widget2/comment/comment.html" %}
@@ -144,28 +110,9 @@
     </div>
   </div>
 </div>
-<div class="dui-layout-lg clearfix" >
-    <!-- ========热门留学方案======== -->
-    <div class="dui-box-shadow" style="margin-top: 20px;background:#fff;" >
-      <div class="common-title">
-          <i></i>
-          <h3>热门留学方案</h3>
-          <a target="_blank" href="{{helper.urlgen('productrank')}}" class="iconfont">&#xe602;</a>
-      </div>  
-      {% esi helper.include(esikey,'fragment/hot_liuxuefangan_list') %}
-    </div>
-    <div class="dui-box-shadow" style="margin-top: 20px;background:#fff;margin-bottom: 20px;">
-      <div class="common-title gray-bg">
-        <i></i>
-        <h3>明星顾问</h3>
-        <a target="_blank" href="{{helper.urlgen('adviser')}}" class="iconfont">&#xe602;</a>
-      </div>
-        {% esi helper.include(esikey,'fragment/community_guwen','n='+hcountry) %}
-    </div>
-</div>
 {% import "widget/slide/slide.html" as  slide %}
 {{slide.leyu_slide("AD_"+tdk.pagekey+"_SEAT10") }}
-{% include 'widget/footer/footer.html' %}
+{% include 'widget/new_footer/new_footer.html' %}
   <div>
       <input type="hidden" id="detail_catid" value="{{catid}}"/>
       <input type="hidden" id="detail_id" value="{{id}}"/>
@@ -180,7 +127,6 @@
 <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
@@ -188,7 +134,6 @@
 <script>
   $(function(){
     //明星顾问轮播
-    $('.advisor_star_bar .slider').xSlider();
     $("#collection").on("click",function(){
       //文章收藏按钮
       var that =this;
@@ -222,7 +167,6 @@
         }
       });
     });
-
     $("#fabulous").on("click",function(){
       //点赞
       if( login_ss == undefined){
@@ -265,17 +209,6 @@
         }
       });
     });
-    $('.share-btn').on('click',share); //点击分享
-    function share(){
-      //调取分享函数
-      var that =this;
-      layer.open({
-        type: 2,
-        title: '分享到',
-        area: ['262px', '327px'],
-        content: ['/share?title='+encodeURI($(that).attr('data-title'))+'&url='+fn.urlgen("article",$("#articleId").attr("data-artId").toString()), 'no']
-      });
-    }
   })
 </script>
 </body>
