--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -15,7 +15,8 @@
       {% else %}
       <p class="advisor-bumen" data-cityId ="" >分公司</p>
       {% endif %}
-      <p class="advisor-enjoy">{{ advisor.skilful_country }}</p>
+      <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else advisor.dept
+}}</p>
     </dd>
   </dl>
   <div class="advisor-intro">
