--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -2,7 +2,7 @@
 {% macro advisor(advisor, helper,login_info) %}
 <div class="community-advisor dui-box-shadow">
   <ul style="height: 40px">
-    <li class="guanzhu">关注<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
+    <li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
     <li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>
   </ul>
   <dl>
@@ -36,7 +36,7 @@
 {% macro advisor_leave(advisor, helper,login_info) %}
 <div class="community-advisor dui-box-shadow">
   <ul>
-    <li class="guanzhu">关注<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
+    <li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
     <li>文章<span class="article-num">{{ advisor.article_count }}</span></li>
   </ul>
   <dl>
@@ -55,7 +55,7 @@
 {% macro counsellor(advisor,helper,login_info) %}
 <div class="community-advisor dui-box-shadow">
   <ul>
-    <li class="guanzhu">关注<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
+    <li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
     <li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>
   </ul>
   <dl>
