--- a/views/adviser_photo_p.html
+++ b/views/adviser_photo_p.html
@@ -15,18 +15,41 @@
 		 	height:100%;
 		 	display: block;
 		 }
+    /*轮播图*/
+    .banner-box{
+        margin-top: 20px;
+        height: 130px;
+        /*background-color: yellow;*/
+    }
+    .banner-box-left{
+        background: #dcdcdc;
+        height: 130px;
+    }
+    .banner-box-right{
+        background: #dcdcdc;
+        height: 130px;
+    }
+    .slider .slider-dot ul{
+        left:97%;
+    }
+    .slider .slider-dot ul li{
+        border-radius: 50%;
+    }
+    .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
+        margin-top: -33px
+    }
     </style>
 </head>
 <body style="background:#f5f5f5;">
 <!-- ===头部=== -->
 {% include "widget/top/top.html" %}
 <!-- ====导航===== -->
-{% import "widget/nav_seventh/nav_seventh.html" as nav_seventh %}
-{{nav_seventh.nav_seventh("#",tdk.cityid,helper)}}
-<div class="dui-layout-lg clearfix" style="margin-top: 20px;">
-	<!-- ==广告1== -->
-	<div class="rel-case-map" id="AD_{% if userinfo.usertype == 2 %}ADVISOR{% elif userinfo.usertype == 3 %}CANZAN{% endif %}_P_ALBUM_SEAT1">
-	</div>
+{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
+{{ new_nav_red.new_nav_red(helper) }}
+<div class="dui-layout-lg clearfix banner-box">
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-div"></div>
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider2.html" %}</div>
 </div>
 <div class="dui-layout-lg clearfix dui-layout-padding" >
     <div class="dui-layout-silde ">
@@ -117,7 +140,7 @@
     }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
@@ -127,6 +150,25 @@
 <script src="{{helper.cdnhost}}/assets/js/bigPhotoSlider.js"></script>
 <script>
     $(function () {
+        $('.banner-box-left .slider').xSlider({
+            //轮播图配置
+//          autoplay : 500,
+            current: 0,
+            speed: 500,
+            intervalTime: 5000,
+            pagination: true
+        });
+        $('.banner-box-right .slider').xSlider({
+            //轮播图配置
+//          autoplay : 500,
+//            mode:'vertical',
+            current: 0,
+            speed: 1000,
+            intervalTime: 5000,
+            slidesPerView: 2,
+            slidesPerGroup: 2,
+//          pagination: true
+        });
         //明星顾问轮播
         $('.advisor_star_bar .slider').xSlider();
         var to_uid = window.location.pathname.split('/')[2];
