--- a/views/widget2/article/article.html
+++ b/views/widget2/article/article.html
@@ -2,7 +2,7 @@
 <div class="homepage">
   <div class="homepagecon">
     <div class="homepageing" style="background:url({{helper.avaterimg(item.uid, 'small',item.user_info.status,item.user_info.version)}}) no-repeat 0 0;background-size: 50px 50px;"></div>
-    <h3>{{item.user_info.realname}}<i></i></h3>
+    <h3>{{item.user_info.realname}}<img src="{{helper.cdnhost}}/assets/img/1v.png" alt=""></h3>
     <ul>
       <div>
         <div class="bdsharebuttonbox" style="margin-top: 15px;">
