--- a/public/assets/css/guwen_yonghu.css
+++ b/public/assets/css/guwen_yonghu.css
@@ -40,19 +40,9 @@
   font-size: 14px;
   color: #333;
   float: left;
-  position: relative;
 }
-.homepagecon h3 i{
+.homepagecon h3 img{
   margin-left: 4px;
-  display: block;
-  background:url(../img/1v.png) no-repeat 0 0;
-  background-size: 14px 14px;
-  width: 14px;
-  height: 14px;
-  float: left;
-  position: absolute;
-  top:32px;
-  left: 44px;
 }
 .homepagecon ul li {
   float: left;
