--- a/views/adviser_main.html
+++ b/views/adviser_main.html
@@ -312,8 +312,7 @@
               report_type: '1',
               report_content: report_content,
               userid: login_ss.uid,
-              artecle_id: $(that).attr("data-artId"),
-              catid: $(that).attr("data-catid")
+              artecle_id: $(that).attr("data-artId")
             },
             dataType: 'json',
             // jsonpCallback:'callback',
