--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,7 @@
         <p><span>G</span><a target="_blank" class="dui-text-warning-s"  href="{{helper.urlgen('branch_home','c=3')}}">广州</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=35')}}">贵州</a></p>
         <p><span>H</span><a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=6')}}">杭州</a>
+          <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=51')}}">汉口</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=22')}}">合肥</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=24')}}">哈尔滨</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=26')}}">呼市</a>
@@ -58,7 +59,8 @@
         <p><span>T</span><a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=4')}}">天津</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=17')}}">太原</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=18')}}">唐山</a></p>
-        <p><span>W</span><a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=14')}}">武汉</a>
+        <!--<p><span>W</span><a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=14')}}">武汉</a>-->
+        <p><span>W</span><a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=50')}}">武昌</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=33')}}">无锡</a>
           <a target="_blank" class="dui-text-warning-s" href="{{helper.urlgen('branch_home','c=42')}}">温州</a>
         </p>
