--- a/views/center_article.html
+++ b/views/center_article.html
@@ -46,15 +46,37 @@
 	 	height:100%;
 	 	display: block;
 	 }
+  .banner-box{
+    margin-top: 20px;
+    height: 130px;
+    /*background-color: yellow;*/
+  }
+  .banner-box-left{
+    background: #dcdcdc;
+    height: 130px;
+  }
+  .banner-box-right{
+    background: #dcdcdc;
+    height: 130px;
+  }
+  .slider .slider-dot ul{
+    left:95%;
+  }
+  .slider .slider-dot ul li{
+    border-radius: 50%;
+  }
+  .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left{
+    margin-top: -33px
+  }
 </style>
 <body style="background: #f5f5f5">
   {% include "widget/top/top.html" %}
   {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
   {{ new_nav_first.new_nav_first(helper) }}
-  <div class="dui-layout-lg clearfix" style="margin-top: 20px;">
-	<!-- ==广告1== -->
-	<div class="rel-case-map" id="AD_{% if login_info.usertype == 2 %}ADVISOR{% elif login_info.usertype == 3 %}CANZAN{% endif %}_CENTER_ARTICLE_SEAT1">
-	</div>
+  <div class="dui-layout-lg clearfix banner-box">
+    <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+    <div class="dui-layout-div"></div>
+    <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
   </div>
   <div class="dui-layout-lg clearfix" style="margin-top: 20px;">
     <div class="dui-layout-silde right">
@@ -117,14 +139,34 @@
   <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/online_evaluation.js" ></script>
   <script src="{{helper.cdnhost}}/assets/js/slide.js"></script>
-  <script src="{{helper.cdnhost}}/assets/js/nav_seventh.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/nav.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/common/select.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/bottom_comment_zhuanlan.js"></script>
   <script src="{{helper.cdnhost}}/assets/js/layer.min.js"></script>
+  <script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
   <script>
     $(function() {
+        $('.banner-box-left .slider').xSlider({
+            //轮播图配置
+//          autoplay : 500,
+            current: 0,
+            speed: 500,
+            intervalTime: 5000,
+            pagination: true
+        });
+        $('.banner-box-right .slider').xSlider({
+            //轮播图配置
+//          autoplay : 500,
+//            mode:'vertical',
+            current: 0,
+            speed: 1000,
+            intervalTime: 5000,
+            slidesPerView : 2,
+            slidesPerGroup : 2,
+//          pagination: true
+        });
         function appendArticleItem (aitem) {
             var aItemHtml = '';
             var identity = '';
