--- a/public/assets/css/widget2/message.css
+++ b/public/assets/css/widget2/message.css
@@ -54,3 +54,26 @@
     text-align: center;
     line-height: 40px;
 }
+/*轮播图*/
+.banner-box{
+    margin-top: 20px;
+    height: 130px;
+    /*background-color: yellow;*/
+}
+.banner-box-left{
+    background: #dcdcdc;
+    height: 130px;
+}
+.banner-box-right{
+    background: #dcdcdc;
+    height: 130px;
+}
+.slider .slider-dot ul{
+    left:95%;
+}
+.slider .slider-dot ul li{
+    border-radius: 50%;
+}
+.slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
+    margin-top: -33px
+}
