--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -71,6 +71,29 @@
   .word-num span{
     color: #c13232;
   }
+  /*轮播图*/
+  .banner-box{
+    margin-top: 20px;
+    height: 130px;
+    /*background-color: yellow;*/
+  }
+  .banner-box-left{
+    background: #dcdcdc;
+    height: 130px;
+  }
+  .banner-box-right{
+    background: #dcdcdc;
+    height: 130px;
+  }
+  .slider .slider-dot ul{
+    left:95%;
+  }
+  .slider .slider-dot ul li{
+    border-radius: 50%;
+  }
+  .slider .slider-btn.slider-btn-right,.slider .slider-btn.slider-btn-left {
+    margin-top: -33px
+  }
 </style>
 </head>
 <body style="background: #f5f5f5">
@@ -80,8 +103,11 @@
 {% import "widget/new_nav_first/new_nav_first.html" as new_nav_first %}
 {{ new_nav_first.new_nav_first(helper) }}
 
-<div class="dui-layout-lg clearfix list-h" style="margin-top: 20px;" id="AD_ADVISOR_CENTER_PROFILE_SEAT1"></div>
-
+<div class="dui-layout-lg clearfix banner-box">
+  <div class="dui-layout-con banner-box-left">{% include "widget/xSlider/xSlider.html" %}</div>
+  <div class="dui-layout-div"></div>
+  <div class="dui-layout-silde banner-box-right">{% include "widget/xSlider/xSlider2.html" %}</div>
+</div>
 <div class="dui-layout-lg clearfix">
   <div class="dui-layout-silde right">
     <div class="clearfix" style="margin-top: 20px">
@@ -134,11 +160,31 @@
   }
 </script>
 <script src="{{helper.cdnhost}}/assets/js/show_advert.js"></script>
-<script src="{{helper.cdnhost}}/assets/js/nav_seventh.js" ></script>
+<script src="{{helper.cdnhost}}/assets/js/nav.js" ></script>
 <script src="{{helper.cdnhost}}/assets/js/follow.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/xSlider.js" ></script>
 <script>
   $(function(){
+      $('.banner-box-left .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+          current: 0,
+          speed: 500,
+          intervalTime: 5000,
+          pagination: true
+      });
+      $('.banner-box-right .slider').xSlider({
+          //轮播图配置
+//          autoplay : 500,
+//            mode:'vertical',
+          current: 0,
+          speed: 1000,
+          intervalTime: 5000,
+          slidesPerView : 2,
+          slidesPerGroup : 2,
+//          pagination: true
+      });
     $("#gerenjieshao").on("change",function(){
       this.value = this.value.substring(0, 500);
     });
