--- a/views/adviser_hot.html
+++ b/views/adviser_hot.html
@@ -135,12 +135,12 @@
           '<div class="homepageing" style="background:url(' + fn.avaterimg(aitem.uid, 'small', aitem.user_info.status, aitem.user_info.version) + ') no-repeat 0 0;background-size: 50px 50px;"></div>' +
           '<h3>' + aitem.user_info.realname + '<img src="'+ ajaxUrlPrefix.cdnhost +'/assets/img/1v.png" alt=""></h3>' +
           '<ul>' +
-          '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 4px;">' +
+          '<div class="bdsharebuttonbox bdshare-button-style0-16" style="margin-top: 15px;">' +
           '<a href="#" class="bds_weixin" data-cmd="weixin" title="分享到微信"></a>' +
           '<a href="#" class="bds_weixin weixin-pengyouquan" data-cmd="weixin" title="分享到微信朋友圈"></a>'+
           '<a href="#" class="bds_tsina" data-cmd="tsina" title="分享到新浪微博"></a>' +
           '<a href="#" class="bds_sqq" data-cmd="sqq" title="分享到QQ"></a>' +
-          '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px">举报</div>' +
+          '<div class="report-btn" style="color: #666;font-size: 12px;float: left;margin-top: 6px;margin-right: 5px" data-artId="'+aitem.id+'">举报</div>' +
           '</div>' +
           '</div>' +
           '</ul>' +
@@ -305,7 +305,8 @@
               report_type: '1',
               report_content: report_content,
               userid: login_ss.uid,
-              artecle_id: $(that).attr("data-artId")
+              artecle_id: $(that).attr("data-artId"),
+              catid: $(that).attr("data-catid")
             },
             dataType: 'json',
             // jsonpCallback:'callback',
